--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidAttendance">
-        <activity android:name=".Activitys.AdminActivity"></activity>
+        <activity android:name=".Activitys.UserActivity"></activity>
+        <activity
+            android:name=".Activitys.LoginActivity"
+            android:theme="@style/Theme.AndroidAttendance.NoActionBar" />
+        <activity
+            android:name=".User.RegisterUser"
+            android:theme="@style/Theme.AndroidAttendance.NoActionBar" />
         <activity android:name=".Activitys.MainActivity"
-            android:theme="@style/Theme.AndroidAttendance.NoActionBar"/>
-        <activity android:name=".Activitys.LoginActivity"
             android:theme="@style/Theme.AndroidAttendance.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
