--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ android {
 
 dependencies {
 
+    implementation platform('com.google.firebase:firebase-bom:27.1.0')
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
@@ -48,3 +49,4 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:20.0.4'
 }
 apply plugin: 'com.google.gms.google-services'
+apply plugin: 'com.android.application'
