--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.androidattendance">
-
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -11,13 +12,20 @@
         android:theme="@style/Theme.AndroidAttendance">
         <activity android:name=".Activitys.UserActivity"></activity>
         <activity
+            android:name=".Activitys.AdminActivity"
+            android:theme="@style/Theme.AndroidAttendance.NoActionBar"
+            android:parentActivityName=".Activitys.MainActivity"/>
+        <activity
             android:name=".Activitys.LoginActivity"
-            android:theme="@style/Theme.AndroidAttendance.NoActionBar" />
+            android:theme="@style/Theme.AndroidAttendance.NoActionBar"
+            android:parentActivityName=".Activitys.MainActivity"/>
         <activity
             android:name=".User.RegisterUser"
-            android:theme="@style/Theme.AndroidAttendance.NoActionBar" />
+            android:theme="@style/Theme.AndroidAttendance.NoActionBar"
+            android:parentActivityName=".Activitys.MainActivity"/>
         <activity android:name=".Activitys.MainActivity"
-            android:theme="@style/Theme.AndroidAttendance.NoActionBar">
+            android:theme="@style/Theme.AndroidAttendance.NoActionBar"
+            android:parentActivityName=".Activitys.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
