--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,22 +10,22 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidAttendance">
-        <activity android:name=".Activitys.UserActivity"></activity>
+        <activity android:name=".UserActivitys.TeacherActivitys.UserActivity"></activity>
         <activity
-            android:name=".Activitys.AdminActivity"
+            android:name=".UserActivitys.AdminActivitys.AdminActivity"
             android:theme="@style/Theme.AndroidAttendance.NoActionBar"
-            android:parentActivityName=".Activitys.MainActivity"/>
+            android:parentActivityName=".StartActivitys.MainActivity"/>
         <activity
-            android:name=".Activitys.LoginActivity"
+            android:name=".StartActivitys.LoginActivity"
             android:theme="@style/Theme.AndroidAttendance.NoActionBar"
-            android:parentActivityName=".Activitys.MainActivity"/>
+            android:parentActivityName=".StartActivitys.MainActivity"/>
         <activity
-            android:name=".User.RegisterUser"
+            android:name=".UserActivitys.AdminActivitys.RegisterUser"
             android:theme="@style/Theme.AndroidAttendance.NoActionBar"
-            android:parentActivityName=".Activitys.MainActivity"/>
-        <activity android:name=".Activitys.MainActivity"
+            android:parentActivityName=".StartActivitys.MainActivity"/>
+        <activity android:name=".StartActivitys.MainActivity"
             android:theme="@style/Theme.AndroidAttendance.NoActionBar"
-            android:parentActivityName=".Activitys.MainActivity">
+            android:parentActivityName=".StartActivitys.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
