finished addStudent class in which you can add student to the specific course (plus seperate student data storage) and also can remove a student ONLY from the course

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.androidattendance">
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,22 +12,29 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidAttendance">
-        <activity android:name=".UserActivitys.TeacherActivitys.UserActivity"></activity>
+        <activity
+            android:name=".UserActivitys.TeacherActivitys.UserActivity"
+            android:parentActivityName=".StartActivitys.LoginActivity"
+            android:theme="@style/Theme.AndroidAttendance.NoActionBar" />
         <activity
             android:name=".UserActivitys.AdminActivitys.AdminActivity"
-            android:theme="@style/Theme.AndroidAttendance.NoActionBar"
-            android:parentActivityName=".StartActivitys.MainActivity"/>
+            android:parentActivityName=".StartActivitys.LoginActivity"
+            android:theme="@style/Theme.AndroidAttendance.NoActionBar" />
+        <activity android:name=".UserActivitys.AdminActivitys.addStudent.AdminAddStudent"
+            android:parentActivityName=".UserActivitys.AdminActivitys.AdminActivity"
+            android:theme="@style/Theme.AndroidAttendance.NoActionBar" />
         <activity
             android:name=".StartActivitys.LoginActivity"
-            android:theme="@style/Theme.AndroidAttendance.NoActionBar"
-            android:parentActivityName=".StartActivitys.MainActivity"/>
+            android:parentActivityName=".StartActivitys.MainActivity"
+            android:theme="@style/Theme.AndroidAttendance.NoActionBar" />
         <activity
             android:name=".UserActivitys.AdminActivitys.RegisterUser"
-            android:theme="@style/Theme.AndroidAttendance.NoActionBar"
-            android:parentActivityName=".StartActivitys.MainActivity"/>
-        <activity android:name=".StartActivitys.MainActivity"
-            android:theme="@style/Theme.AndroidAttendance.NoActionBar"
-            android:parentActivityName=".StartActivitys.MainActivity">
+            android:parentActivityName=".UserActivitys.AdminActivitys.AdminActivity"
+            android:theme="@style/Theme.AndroidAttendance.NoActionBar" />
+        <activity
+            android:name=".StartActivitys.MainActivity"
+            android:parentActivityName=".StartActivitys.MainActivity"
+            android:theme="@style/Theme.AndroidAttendance.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
