--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidAttendance">
-        <activity android:name=".UserActivitys.AdminActivitys.CheckingCourse.ADS.ShowAdsActivity"
+        <activity android:name=".UserActivitys.AdminActivitys.CheckingCourse.ESW.ShowEswActivity"
             android:parentActivityName=".UserActivitys.AdminActivitys.CheckingCourse.CheckCourse"
             android:theme="@style/Theme.AndroidAttendance.NoActionBar"/>
+        <activity android:name=".UserActivitys.AdminActivitys.CheckingCourse.DAI.ShowDaiActivity"
+            android:parentActivityName=".UserActivitys.AdminActivitys.CheckingCourse.CheckCourse"
+            android:theme="@style/Theme.AndroidAttendance.NoActionBar"/>
+        <activity
+            android:name=".UserActivitys.AdminActivitys.CheckingCourse.AND.ShowAndActivity"
+            android:parentActivityName=".UserActivitys.AdminActivitys.CheckingCourse.CheckCourse"
+            android:theme="@style/Theme.AndroidAttendance.NoActionBar" />
+        <activity
+            android:name=".UserActivitys.AdminActivitys.CheckingCourse.ADS.ShowAdsActivity"
+            android:parentActivityName=".UserActivitys.AdminActivitys.CheckingCourse.CheckCourse"
+            android:theme="@style/Theme.AndroidAttendance.NoActionBar" />
         <activity
             android:name=".UserActivitys.AdminActivitys.CheckingCourse.CheckCourse"
             android:parentActivityName=".UserActivitys.AdminActivitys.AdminActivity"
