FINISHED DESIGN... CHECK ATTENDANCE IS WORKING... AFTER 2HOURS THE ERROR WAS THAT I HAD IT SET TO THE WRONG DAMN ID

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".UserActivitys.TeacherActivitys.Attendance.CheckAttendance"
+        <activity android:name=".UserActivitys.Profile" />
+        <activity
+            android:name=".UserActivitys.TeacherActivitys.Attendance.CheckAttendance"
             android:parentActivityName=".UserActivitys.TeacherActivitys.UserActivity" />
         <activity
             android:name=".UserActivitys.AdminActivitys.CheckingCourse.ESW.ShowEswActivity"
