4hours left.... why did I have to come up with new ideas on how to fix my issues during the last hours... well this one is probably the last comit

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,11 +13,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".UserActivitys.TeacherActivitys.Attendance.AttendanceList.CheckAttendanceList"
-            android:parentActivityName=".UserActivitys.TeacherActivitys.Attendance.CheckAttendance"
-            android:screenOrientation="portrait"/>
+        <activity android:name=".UserActivitys.ProfileAdmin"></activity>
         <activity
-            android:name=".UserActivitys.Profile"
+            android:name=".UserActivitys.TeacherActivitys.Attendance.AttendanceList.CheckAttendanceList"
+            android:parentActivityName=".UserActivitys.TeacherActivitys.Attendance.CheckAttendance"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".UserActivitys.ProfileUser"
             android:screenOrientation="portrait" />
         <activity
             android:name=".UserActivitys.TeacherActivitys.Attendance.CheckAttendance"
