--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,12 +42,11 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
     implementation 'com.google.firebase:firebase-database:19.7.0'
     implementation 'com.google.firebase:firebase-analytics:18.0.3'
-    
+
+    //JUnit Rules
+    androidTestImplementation 'androidx.test:rules:1.4.0-beta01'
 
 
-    //Authentication
-    implementation 'com.firebaseui:firebase-ui-auth:4.3.1'
-    implementation 'com.google.firebase:firebase-auth:20.0.4'
 }
 apply plugin: 'com.google.gms.google-services'
 apply plugin: 'com.android.application'
