haha, you thought that was the last commit? nope....

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".UserActivitys.ProfileAdmin"></activity>
+        <activity android:name=".UserActivitys.ProfileAdmin"
+            android:parentActivityName=".UserActivitys.AdminActivitys.AdminActivity"
+            android:screenOrientation="portrait"></activity>
         <activity
             android:name=".UserActivitys.TeacherActivitys.Attendance.AttendanceList.CheckAttendanceList"
             android:parentActivityName=".UserActivitys.TeacherActivitys.Attendance.CheckAttendance"
